; ModuleID = '/home/carl/AnghaBench/Cello/src/extr_Iter.c_Slice_Mem.c'
source_filename = "/home/carl/AnghaBench/Cello/src/extr_Iter.c_Slice_Mem.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, i64)* @Slice_Mem to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @Slice_Mem(i64 %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  %7 = load i64, i64* %4, align 8
  %8 = call i64 @Slice_Iter_Init(i64 %7)
  store i64 %8, i64* %6, align 8
  br label %9

9:                                                ; preds = %18, %2
  %10 = load i64, i64* %6, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %22

12:                                               ; preds = %9
  %13 = load i64, i64* %6, align 8
  %14 = load i64, i64* %5, align 8
  %15 = call i64 @eq(i64 %13, i64 %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %18

17:                                               ; preds = %12
  store i32 1, i32* %3, align 4
  br label %23

18:                                               ; preds = %12
  %19 = load i64, i64* %4, align 8
  %20 = load i64, i64* %6, align 8
  %21 = call i64 @Slice_Iter_Next(i64 %19, i64 %20)
  store i64 %21, i64* %6, align 8
  br label %9

22:                                               ; preds = %9
  store i32 0, i32* %3, align 4
  br label %23

23:                                               ; preds = %22, %17
  %24 = load i32, i32* %3, align 4
  ret i32 %24
}

declare dso_local i64 @Slice_Iter_Init(i64) #1

declare dso_local i64 @eq(i64, i64) #1

declare dso_local i64 @Slice_Iter_Next(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
